# Rust_Axum

./: .env  Cargo.toml  README.md  addRecord.html  createTable.html  index.html  test.bat
src/: create.rs  delete.rs  get.rs  insert.rs  main.rs  update.rs
